<?xml version="1.0"?>
<resources>
    <string name="app_name">"Yfa Companion"</string>
    <string name="action_settings">"Paramètres"</string>

    <string name="setting_activity">Paramètres</string>
    <string name="main_action_skill">Compétences</string>
    <string name="main_action_spell">Sortilèges</string>
    <string name="quadrantGeneralTitle">Caractéristiques</string>
    <string name="custom_dialog_test_rolldice">normal (dé 20)</string>
    <string name="custom_dialog_test_passive">Passif (+10)</string>
    <string name="custom_dialog_test_focus">concentré (+20)</string>
    <string name="health_dialog_heal">soin</string>
    <string name="health_dialog_regen">régen</string>
    <string name="health_dialog_shield">(pv temp)</string>
    <string name="health_dialog_dmg">dégât</string>

    <string name="quadrantQ1Title">Caractéristiques de base</string>
    <string name="quadrantQ2Title">Ressources</string>
    <string name="quadrantQ3Title">Caractéristiques défensives</string>
    <string name="quadrantQ4Title">Caractéristiques avancées</string>
    <string name="skill_mastery">Rang de maîtrise</string>
    <string name="skill_bonus">Bonus divers</string>
    <string name="help_activity">Centre d\'aide</string>
    <string name="buff_activity">Gestion des améliorations</string>
    <string name="current_campaign">illu</string>
    <string name="title_activity_saving">Sauvegarde</string>


    <string-array name="values">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"11"</item>
        <item>"12"</item>
        <item>"13"</item>
        <item>"14"</item>
        <item>"15"</item>
    </string-array>


    <string-array name="slot_choice_val">
        <item>eyes_slot</item>
        <item>shoulder_slot</item>
        <item>hand_slot</item>
        <item>ring1_slot</item>
        <item>mainhand_slot</item>
        <item>helm_slot</item>
        <item>neck_slot</item>
        <item>armor_slot</item>
        <item>belt_slot</item>
        <item>feet_slot</item>
        <item>face_slot</item>
        <item>chest_slot</item>
        <item>wrist_slot</item>
        <item>ring2_slot</item>
        <item>offhand_slot</item>
        <item>other_slot</item>
    </string-array>

    <string-array name="slot_choice_name">
        <item>Yeux</item>
        <item>Epaules</item>
        <item>Mains</item>
        <item>Anneau 1</item>
        <item>Main principale</item>
        <item>Casque</item>
        <item>Cou</item>
        <item>Armure</item>
        <item>Ceinture</item>
        <item>Pieds</item>
        <item>Visage</item>
        <item>Corps</item>
        <item>Poignets</item>
        <item>Anneau 2</item>
        <item>Main secondaire</item>
        <item>Hors emplacement</item>
    </string-array>


    <!-- Stats -->
    <string-array name="stat_bin">
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
    </string-array>

</resources>
