<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:gravity="center"
    android:id="@+id/health_dialog_RelativeLayoutMain"
    android:background="@drawable/background_border_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/general_margin"
        android:gravity="center_horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/healthDialogFrameHeathBar"
            android:layout_gravity="center"
             >
            <TextView
                android:id="@+id/health_dialog_floating_numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="+x"
                android:visibility="invisible"
                />

            <ImageView
                android:id="@+id/health_dialog_back_health"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_margin="@dimen/general_margin"
                android:layout_gravity="bottom"
                android:adjustViewBounds="true"
                android:src="@color/colorPrimaryDark" />

            <ImageView
                android:id="@+id/health_dialog_back_health_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_margin"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/life_bar_overlay" />

        </FrameLayout>

        <TextView
            android:id="@+id/healthDialogHealthTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_margin"
            android:gravity="center_horizontal"
            android:text="Vie restante (points de vie temporaires) :"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_margin"
            android:id="@+id/healthDialogHealth"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="xxx/xxx (xx)"
            android:textColor="@android:color/black" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/healthDialogLinearButtonHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/button_healthDialog_heal"
            android:layout_width="@dimen/size_button_healthDialog"
            android:layout_height="wrap_content"
            android:background="@drawable/button_ok_gradient"
            android:textSize="12sp"
            android:textColor="@color/colorTextButtonHealthDialog"
            android:text="@string/health_dialog_heal"/>
        <Button
            android:id="@+id/button_healthDialog_regen"
            android:layout_width="@dimen/size_button_healthDialog"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:background="@drawable/button_ok_gradient"
            android:textColor="@color/colorTextButtonHealthDialog"
            android:textSize="12sp"
            android:text="@string/health_dialog_regen"/>
        <Button
            android:id="@+id/button_healthDialog_shield"
            android:layout_width="@dimen/size_button_healthDialog"
            android:layout_height="wrap_content"
            android:background="@drawable/button_basic_gradient"
            android:textColor="@color/colorTextButtonHealthDialog"
            android:textSize="12sp"
            android:text="@string/health_dialog_shield"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/button_healthDialog_dmg"
            android:layout_width="@dimen/size_button_healthDialog"
            android:layout_height="wrap_content"
            android:background="@drawable/button_cancel_gradient"
            android:textColor="@color/colorTextButtonHealthDialog"
            android:textSize="12sp"
            android:text="@string/health_dialog_dmg"/>

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/healthDialogSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:singleLine="false"
            android:layout_marginBottom="@dimen/margin_healthDialog_text"
            android:textSize="18sp"
            android:text="Bravo"
            android:visibility="invisible"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_healthDialog_text"

            android:text="Choisis ton action"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />
    </LinearLayout>

</RelativeLayout>