<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipChildren="false"
    tools:context="stellarnear.yfa_dealer.Activities.MainActivityFragment">


    <LinearLayout
        android:id="@+id/LinearMainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_bar_gradient"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_to_spell_list"
                android:layout_width="@dimen/size_icon_main"
                android:layout_height="@dimen/size_icon_main"
                android:layout_gravity="center_vertical|left"
                android:adjustViewBounds="true"
                android:backgroundTint="@android:color/transparent"
                android:padding="@dimen/general_margin"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/mire_test" />

            <ImageView
                android:layout_width="@dimen/size_icon_main_rota"
                android:layout_height="@dimen/size_icon_main_rota"
                android:layout_gravity="center_vertical|left"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/rotate_left" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewMainScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Menu principal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/size_icon_main_rota"
                android:layout_height="@dimen/size_icon_main_rota"
                android:layout_gravity="center_vertical|right"
                android:scaleType="fitCenter"

                app:srcCompat="@drawable/rotate_right" />

            <ImageButton
                android:id="@+id/button_to_help"
                android:layout_width="@dimen/size_icon_main"
                android:layout_height="@dimen/size_icon_main"
                android:layout_gravity="center_vertical|right"
                android:backgroundTint="@android:color/transparent"
                android:padding="@dimen/general_margin"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/help" />
        </LinearLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/frag_main_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:clipChildren="false"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_frag_to_skill"
            android:layout_width="@dimen/size_icon_main_actions"
            android:layout_height="@dimen/size_icon_main_actions"
            android:adjustViewBounds="true"
            android:backgroundTint="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/skill"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textSkillActionTooltip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/main_action_skill"
            android:textSize="@dimen/size_text_main_actions" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/general_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:clipChildren="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_frag_to_spell"
            android:layout_width="@dimen/size_icon_main_actions"
            android:layout_height="@dimen/size_icon_main_actions"
            android:adjustViewBounds="true"
            android:backgroundTint="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/mire_test"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textCastActionTooltip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/main_action_spell"
            android:textSize="@dimen/size_text_main_actions" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clipChildren="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/quadrantGeneralTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/general_margin"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/quadrantGeneralTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

        <ViewSwitcher
            android:id="@+id/viewSwitcherQuadrant"
            android:clipChildren="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_frag_stats_heigh_quadrant"
                android:layout_margin="@dimen/general_margin"
                android:orientation="vertical"
                android:clipChildren="false"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/main_frag_stats_quadrantLine1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:clipChildren="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/main_frag_stats_quadrant1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/general_margin"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:background="@drawable/quadrant_basic_gradient"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/main_frag_stats_quadrant1_1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"></LinearLayout>

                        <LinearLayout
                            android:id="@+id/main_frag_stats_quadrant1_2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"></LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/main_frag_stats_quadrant2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/general_margin"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:animateLayoutChanges="true"
                        android:background="@drawable/quadrant_basic_gradient"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/main_frag_stats_quadrant2_1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"></LinearLayout>

                        <LinearLayout
                            android:id="@+id/main_frag_stats_quadrant2_2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"></LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_frag_stats_quadrantLine2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:clipChildren="false"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <LinearLayout
                        android:id="@+id/main_frag_stats_quadrant3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/general_margin"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:animateLayoutChanges="true"
                        android:background="@drawable/quadrant_basic_gradient"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/main_frag_stats_quadrant3_1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"></LinearLayout>

                        <LinearLayout
                            android:id="@+id/main_frag_stats_quadrant3_2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"></LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/main_frag_stats_quadrant4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/general_margin"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:animateLayoutChanges="true"
                        android:background="@drawable/quadrant_basic_gradient"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/main_frag_stats_quadrant4_1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"></LinearLayout>

                        <LinearLayout
                            android:id="@+id/main_frag_stats_quadrant4_2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"></LinearLayout>
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </ViewSwitcher>
    </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
